--- a/src/connector/CMakeLists.txt
+++ b/src/connector/CMakeLists.txt
@@ -18,8 +18,10 @@ add_library(${PROJECT_NAME}
     ../log/log.c
 )
 
-target_include_directories(${PROJECT_NAME} PUBLIC
-    ../../include
+target_include_directories(${PROJECT_NAME}
+    PUBLIC
+    "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
+    PRIVATE ../../include
 )
 
 target_include_directories (${PROJECT_NAME} PRIVATE
