--- a/src/token_verifier/CMakeLists.txt
+++ b/src/token_verifier/CMakeLists.txt
@@ -9,7 +9,10 @@ add_library(${PROJECT_NAME}
     util.c
 )
 
-target_include_directories(${PROJECT_NAME} PUBLIC
+target_include_directories(${PROJECT_NAME}
+    PUBLIC
+    "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
+    PRIVATE
     ../../include
 )
 
